<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_8k_off">8K is off</string>
    <string name="accessibility_8k_on">8K is on</string>
    <string name="accessibility_add">Add</string>
    <string name="accessibility_ai_identify">Recognize</string>
    <string name="accessibility_ai_scene_off">AI camera is off</string>
    <string name="accessibility_ai_scene_on">AI camera is on</string>
    <string name="accessibility_ai_watermark_panel_on">AI watermark panel</string>
    <string name="accessibility_ambilight_panel_on">Open Long exposure panel</string>
    <string name="accessibility_back_preview_status">Rear camera preview</string>
    <string name="accessibility_beauty_function_button">Beautify</string>
    <string name="accessibility_beauty_function_panel_on">Beautify panel</string>
    <string name="accessibility_beauty_panel_closed">Beautify menu is hidden</string>
    <string name="accessibility_beauty_panel_open">Beautify menu is opened</string>
    <string name="accessibility_beauty_switch_closed">Beautify is off</string>
    <string name="accessibility_beauty_switch_open">Beautify is on</string>
    <string name="accessibility_bokeh_adjust">Adjusting background blur</string>
    <string name="accessibility_bokeh_level">F%1$s aperture</string>
    <string name="accessibility_bokeh_normal">Front camera background blur is off</string>
    <string name="accessibility_bokeh_on">Front camera background blur is on</string>
    <string name="accessibility_camera_lighting_close_panel">Closed lighting effects menu</string>
    <string name="accessibility_camera_lighting_open_panel">Opened lighting effects menu</string>
    <string name="accessibility_camera_liveshot_off">Turned off dynamic shots</string>
    <string name="accessibility_camera_liveshot_on">Turned on dynamic shots</string>
    <string name="accessibility_camera_picker">Front and rear camera switch</string>
    <string name="accessibility_camera_picker_finish">Switched cameras successfully</string>
    <string name="accessibility_camera_record_start">Started recording video</string>
    <string name="accessibility_camera_record_stop">Stopped recording video</string>
    <string name="accessibility_camera_shutter_finish">Took a photo successfully</string>
    <string name="accessibility_camera_switch_capture_recording">Switch between photo and video modes</string>
    <string name="accessibility_camera_ultra_wide_bokeh_off">Full body mode is off</string>
    <string name="accessibility_camera_ultra_wide_bokeh_on">Full body mode is on</string>
    <string name="accessibility_camera_video_960fps_120">120FPS</string>
    <string name="accessibility_camera_video_960fps_240">240FPS</string>
    <string name="accessibility_camera_video_960fps_960">960FPS</string>
    <string name="accessibility_camera_video_fps_120">120FPS</string>
    <string name="accessibility_camera_video_fps_30">30FPS</string>
    <string name="accessibility_camera_video_slow_motion_fps">%dFPS</string>
    <string name="accessibility_closed">Off</string>
    <string name="accessibility_color">Color</string>
    <string name="accessibility_date">Date</string>
    <string name="accessibility_delay_capture_10s_button">Timer set for ten seconds</string>
    <string name="accessibility_delay_capture_3s_button">Timer set for three seconds</string>
    <string name="accessibility_delay_capture_5s_button">Timer set for five seconds</string>
    <string name="accessibility_delay_capture_close_button">Timer is off</string>
    <string name="accessibility_description_clone_button">Clone panel</string>
    <string name="accessibility_description_dolly_zoom_button">Magic zoom</string>
    <string name="accessibility_deselect_all">Deselect all</string>
    <string name="accessibility_deselect_all_end">Deselected all</string>
    <string name="accessibility_document_blackwhite_button">Scanning documents. Black and white.</string>
    <string name="accessibility_document_origin_button">Scanning documents. Original.</string>
    <string name="accessibility_document_strengthen_button">Scanning documents. Enhanced.</string>
    <string name="accessibility_dual_preview_change">View changes</string>
    <string name="accessibility_dual_preview_change_finish">Viewed changes successfully</string>
    <string name="accessibility_dual_video_merged">Combined video</string>
    <string name="accessibility_dual_video_standalone">Separated videos</string>
    <string name="accessibility_effect_mode_button">Effect button</string>
    <string name="accessibility_eis_normal">Steady video is on</string>
    <string name="accessibility_eis_off">Steady video is off</string>
    <string name="accessibility_eis_pro">Steady video PRO is on</string>
    <string name="accessibility_expand">Zoom in</string>
    <string name="accessibility_fastmotion_speed_panel_on">Speed and duration panel</string>
    <string name="accessibility_filter_close_panel">Closed filter menu</string>
    <string name="accessibility_filter_open_panel">Opened filter menu</string>
    <string name="accessibility_filter_pad_close">Filter menu is hidden</string>
    <string name="accessibility_flash_auto">Auto flash is on</string>
    <string name="accessibility_flash_back_soft_light">Flash is working in the Soft light mode</string>
    <string name="accessibility_flash_off">Flash is off</string>
    <string name="accessibility_flash_on">Flash is on</string>
    <string name="accessibility_flash_torch">Flash is on, torch mode</string>
    <string name="accessibility_focus_face_pos_bottom">靠近底部边缘</string>
    <string name="accessibility_focus_face_pos_left">靠近左侧边缘</string>
    <string name="accessibility_focus_face_pos_left_bottom">靠近底部左侧边缘</string>
    <string name="accessibility_focus_face_pos_left_top">靠近顶部左侧边缘</string>
    <string name="accessibility_focus_face_pos_mid">居中</string>
    <string name="accessibility_focus_face_pos_right">靠近右侧边缘</string>
    <string name="accessibility_focus_face_pos_right_bottom">靠近底部右侧边缘</string>
    <string name="accessibility_focus_face_pos_right_top">靠近顶部右侧边缘</string>
    <string name="accessibility_focus_face_pos_top">靠近顶部边缘</string>
    <string name="accessibility_focus_status">%1$sX zoom</string>
    <string name="accessibility_foucs_peak">Peak value</string>
    <string name="accessibility_front_preview_status">Front camera preview</string>
    <string name="accessibility_hdr">HDR switch button</string>
    <string name="accessibility_hdr_auto">Auto HDR is on</string>
    <string name="accessibility_hdr_live">HDR Live is on</string>
    <string name="accessibility_hdr_normal">HDR Pro is on</string>
    <string name="accessibility_hdr_off">HDR is off</string>
    <string name="accessibility_hdr_on">HDR is on</string>
    <string name="accessibility_horizontal_shutter_off">Turned off shooting in landscape mode</string>
    <string name="accessibility_horizontal_shutter_on">Shooting in landscape mode</string>
    <string name="accessibility_intent_done_apply">Done</string>
    <string name="accessibility_intent_done_retry">Retry</string>
    <string name="accessibility_item">Item</string>
    <string name="accessibility_lighting_panel_off">Studio lighting bar is hidden</string>
    <string name="accessibility_lighting_panel_on">Showing studio lighting bar</string>
    <string name="accessibility_live_edit_exit_button">Exit</string>
    <string name="accessibility_live_music_loading_button">Loading</string>
    <string name="accessibility_live_music_pause_button">Pause</string>
    <string name="accessibility_live_music_play_button">Play</string>
    <string name="accessibility_live_preview_button">View previous item</string>
    <string name="accessibility_live_reverse_button">Delete previous clip</string>
    <string name="accessibility_live_speed_panel_on">Speed panel</string>
    <string name="accessibility_manually_custom_panel_on">Customization panel</string>
    <string name="accessibility_mimoji_background_panel_on">Backgrounds panel</string>
    <string name="accessibility_mimoji_gif_off">GIF mode is off</string>
    <string name="accessibility_mimoji_gif_on">GIF mode is on</string>
    <string name="accessibility_mimoji_image_panel_on">Avatar panel</string>
    <string name="accessibility_mimoji_timbre_panel_on">Voice panel</string>
    <string name="accessibility_mimovie_off">Not using movie frame</string>
    <string name="accessibility_mimovie_on">Using movie frame</string>
    <string name="accessibility_module_picker_finish">Switched to %s</string>
    <string name="accessibility_more">More</string>
    <string name="accessibility_open">On</string>
    <string name="accessibility_pano_moving_left">Move device to the left</string>
    <string name="accessibility_pano_moving_right">Move device to the right</string>
    <string name="accessibility_peak">Focus peak button</string>
    <string name="accessibility_picturesize_1_1_button">One by one aspect ratio</string>
    <string name="accessibility_picturesize_3_4_button">Three by four aspect ratio</string>
    <string name="accessibility_picturesize_9_16_button">Nine by sixteen aspect ratio</string>
    <string name="accessibility_picturesize_fullscreen_button">Full screen aspect ratio</string>
    <string name="accessibility_portrait_button">Portrait mode</string>
    <string name="accessibility_portrait_depth_effect_panel_on">Portrait panel</string>
    <string name="accessibility_preview_button">Preview</string>
    <string name="accessibility_preview_effect_button">Preview effect</string>
    <string name="accessibility_preview_expand">Zoom in</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="prompt_desc">使用此功能将会消耗您约%sM流量数据，是否继续下载？</string>
    <string name="remote_online_introduction_i">多机联录功能支持两台手机在不同视角下录制影像，并合成为一个视频。可通过本机查看两台手机的录像预览和成片，同时仅支持本机录制声音。</string>
    <string name="remote_online_introduction_ii">对方需在下拉通知栏中打开“多机联录”开关，仅支持相机有“多机联录”功能的手机。</string>
    <string name="remote_online_whats">什么是多机联录？</string>
    <string name="warm_prompt">温馨提示</string>
</resources>