<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/home_two" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_text_size" android:textColor="@color/setup_wizard_home_text_color" android:paddingLeft="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_padding_left_and_right" android:paddingRight="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_padding_left_and_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remote_online_introduction_i" android:lineHeight="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_line_height" />
        <TextView android:textSize="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_text_size" android:textColor="@color/setup_wizard_home_text_color" android:paddingLeft="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_padding_left_and_right" android:paddingRight="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_padding_left_and_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_text_margintop" android:text="@string/remote_online_introduction_ii" android:lineHeight="@dimen/remote_online_setup_wizard_screen_home_remote_camera_description_line_height" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/home_one" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:background="@drawable/remote_online_circular_background" android:layout_width="@dimen/remote_online_setup_wizard_screen_home_remote_camera_bg_width" android:layout_height="@dimen/remote_online_setup_wizard_screen_home_remote_camera_bg_height" android:layout_marginTop="@dimen/remote_online_setup_wizard_screen_image_margintop">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_remote_camera" />
        </FrameLayout>
        <TextView android:textSize="@dimen/remote_online_setup_wizard_screen_home_remote_camera_text_size" android:textColor="@color/setup_wizard_hint_text_color" android:layout_gravity="center" android:id="@id/home_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/remote_online_setup_wizard_screen_home_remote_camera_ic_margintop" android:text="@string/remote_online_whats" />
    </LinearLayout>
</FrameLayout>